--- a/moblet/m-ecommet.less
+++ b/moblet/m-ecommet.less
@@ -6,6 +6,8 @@ m-ecommet{
 	    margin: 10px;
 	    input {
 	      width: 100%;
+        border: 1px solid #555555;
+        border-radius: 10px;
 			}
 		}
     .carouselbox {
