--- a/moblet/m-becommerce.less
+++ b/moblet/m-becommerce.less
@@ -10,36 +10,9 @@ m-becommerce {
         border-radius: 10px;
 			}
 		}
-    .carouselbox {
-      width: 100%;
-      height: auto;
-      position: relative;
-      position: relative;
-      .slide {
-        width: 100%;
-      	height: 100%;
-        position: absolute;
-        left: -100%;
-        -webkit-transition: left .5s;
-        transition: left .5s;
-        -webkit-transition-timing-function: linear;
-        transition-timing-function: linear;
-        z-index: 10;
-        height: auto;
-      }
-      .next-slide{
-        left: 200%;
-        z-index: 5;
-        -webkit-transition: initial;
-        transition: initial;
-      }
-      .current-slide {
-        left: 0;
-        z-index: 20;
-      }
+    .banner{
       img {
-        width: auto;
-      	max-height: 100%;
+      	width: 100%;
       	margin: 0 auto;
       	display: block;
       }
