--- a/moblet/m-becommerce.less
+++ b/moblet/m-becommerce.less
@@ -17,5 +17,43 @@ m-becommerce {
       	display: block;
       }
     }
+    .sections {
+      padding: 0 10px;
+      :nth-child(odd) {
+        margin-right: 10px;
+      }
+      .product {
+        margin-bottom: 10px;
+        padding: 10px;
+        width: ~"calc(50% - 5px)";
+        background-color: red;
+        float: left;
+        background: #FFFFFF;
+        font-size: 13px;
+        color: #4A4A4A;
+        line-height: 18px;
+        img {
+          width: 100%;
+        }
+        .name {
+          padding: 10px 0;
+          margin: 0;
+          line-height: 18px;
+        }
+        .value {
+          line-height: 18px;
+          font-weight: bold;
+          padding: 0;
+          margin: 0;
+        }
+        .value-from {
+          font-size: 11px;
+          text-decoration: line-through;
+        }
+        .value-to {
+          color: #F37300;
+        }
+      }
+    }
   }
 }
