[master] Updated style

--- a/moblet/m-becommerce.less
+++ b/moblet/m-becommerce.less
@@ -28,6 +28,8 @@ m-becommerce {
       }
 		}
     .banner{
+      background: rgba(215,215,215,0.25);
+      padding-bottom: 15px;
       img {
       	width: 100%;
       	margin: 0 auto;
@@ -35,6 +37,11 @@ m-becommerce {
       }
     }
     .sections {
+      .section-title {
+        font-size: 16px;
+        letter-spacing: 0;
+        padding-top: 10px;
+      }
       padding: 0 10px;
       :nth-child(odd) {
         margin-right: 10px;
