--- a/moblet/m-becommerce.less
+++ b/moblet/m-becommerce.less
@@ -1,4 +1,5 @@
 m-becommerce {
+  @color-grey: #EDEDED;
   @product-font-size: 13px;
   @product-line-height: 1.4;
   @product-lines-to-show: 2;
@@ -16,6 +17,14 @@ m-becommerce {
       0%{background-position:0% 50%}
       50%{background-position:100% 51%}
       100%{background-position:0% 50%}
+  }
+  @keyframes new-product-right {
+    from {transform: translate3d(50vw, 0, 0);}
+    to {transform: translate3d(0, 0, 0);}
+  }
+  @keyframes new-product-left {
+    from {transform: translate3d(-50vw, 0, 0);}
+    to {transform: translate3d(0, 0, 0);}
   }
 	.store {
 		.search-bar {
@@ -63,16 +72,19 @@ m-becommerce {
         padding: 0;
       }
       .products {
-        display: inline-block;
+        display: block;
+        overflow: auto;
         :nth-child(odd).product {
           padding-right: 3vw;
-          border-right: 1px solid #EDEDED;
+          border-right: 1px solid @color-grey;
+          animation-name: new-product-left;
         }
         :nth-child(even).product {
           padding-left: 3vw;
+          animation-name: new-product-right;
         }
         :nth-child(even):nth-last-child(2).product {
-          border-bottom: 1px solid #EDEDED;
+          border-bottom: 1px solid @color-grey;
         }
         :nth-last-child(1).product, :nth-last-child(2).product {
           border-bottom: none;
@@ -84,7 +96,8 @@ m-becommerce {
           background: #FFFFFF;
           color: #4A4A4A;
           padding: 3vw 0 3vw 0;
-          border-bottom: 1px solid #EDEDED;
+          border-bottom: 1px solid @color-grey;
+          animation-duration: .3s;
           .skeleton{
         		background: linear-gradient(270deg, #b8b8b8, #e0e0e0, #b8b8b8, #e0e0e0, #b8b8b8, #e0e0e0);
         		background-size: 10000% 10000%;
@@ -149,15 +162,12 @@ m-becommerce {
       }
       .more-products-button {
         background: #FFFFFF;
-        border-style: solid;
-        border-width: 1px;
-        border-radius: 2px;
+        border-top: 1px solid @color-grey;
         font-size: 14px;
         letter-spacing: 0;
         text-align: center;
         height: 46px;
         padding: 3vw;
-        margin-top: 3vw;
         p {
           margin: 0;
           padding: 0;
