--- a/moblet/m-becommerce.less
+++ b/moblet/m-becommerce.less
@@ -29,28 +29,64 @@ m-becommerce {
     to {transform: translate3d(0, 0, 0);}
   }
 	.store {
+    // Specific platform styles
+    .ios {
+      .search-input {
+        font-size: 12px;
+        border-radius: 5px;
+        height: 30px;
+      }
+      .store-menu {
+        .menu-button {
+          font-size: 14px;
+          padding-bottom: 3vw;
+          letter-spacing: 0;
+        }
+      }
+    }
+    .android{
+      .search-input {
+        font-size: 14px;
+        border-radius: 2px;
+        height: 48px;
+      }
+      .store-menu {
+        padding-top: 2vw;
+        .menu-button {
+          font-size: 16px;
+          padding-bottom: 4vw;
+          letter-spacing: 0.5px;
+          text-transform: uppercase;
+          font-weight: 500;
+        }
+        .selected {
+          padding-bottom: ~"calc(4vw - 2px)!important";
+          border-bottom-width: 2px;
+          border-bottom-style: solid;
+        }
+      }
+    }
 		.search-bar {
 	    display: block;
-	    padding: 10px 10px 12px 10px;
+      overflow: auto;
+      font-family: "Helvetica Neue",Roboto,"Segoe UI",sans-serif;
 	    .search-input {
-        height: 30px;
-	      width: ~"calc(100% - 20px)";
-        border-radius: 5px;
-        padding: 0 10px;
+        margin: 3vw;
+        width: 88vw;
+        padding: 0 3vw;
         background: #FFFFFF;
 			}
       .store-menu {
-        padding-top: 12px;
-        display: flex;
+        display: block;
+        overflow: auto;
         text-align: center;
         .menu-button{
-          font-family: "Helvetica Neue",Roboto,"Segoe UI",sans-serif;
-          width: 50%;
-          font-size: 14px;
-          letter-spacing: 0;
+          width: 50vw;
+          float: left;
           opacity: 0.6;
         }
         .selected {
+          background-color: initial!important;
           font-weight: 400;
           opacity: 1;
         }
