[master] Changed some class names and the resize and scroll order when loading some lists

--- a/moblet/m-becommerce.less
+++ b/moblet/m-becommerce.less
@@ -111,7 +111,7 @@ m-becommerce {
     :nth-last-child(1).sections {
       border-bottom: none;
     }
-    .sections {
+    .section {
       padding: 3vw;
       h1.section-title {
         font-size: 16px;
