[master] Updated menu layout

--- a/moblet/m-becommerce.less
+++ b/moblet/m-becommerce.less
@@ -33,35 +33,35 @@ m-becommerce {
     // Specific platform styles
     .ios {
       .search-input {
-        font-size: 12px;
+        font-size: 14px;
         border-radius: 5px;
         height: 30px;
       }
       .store-menu {
         .menu-button {
           font-size: 14px;
-          padding-bottom: 3vw;
+          padding-bottom: 10px;
           letter-spacing: 0;
         }
       }
     }
     .android{
       .search-input {
-        font-size: 14px;
+        font-size: 16px;
         border-radius: 2px;
-        height: 48px;
+        height: 42px;
       }
       .store-menu {
-        padding-top: 2vw;
+        padding-top: 8px;
         .menu-button {
           font-size: 16px;
-          padding-bottom: 4vw;
+          padding-bottom: 18px;
           letter-spacing: 0.5px;
           text-transform: uppercase;
           font-weight: 500;
         }
         .selected {
-          padding-bottom: ~"calc(4vw - 2px)!important";
+          padding-bottom: 16px;
           border-bottom-width: 2px;
           border-bottom-style: solid;
         }
@@ -72,9 +72,9 @@ m-becommerce {
       overflow: auto;
       font-family: "Helvetica Neue",Roboto,"Segoe UI",sans-serif;
 	    .search-input {
-        margin: 3vw;
-        width: 88vw;
-        padding: 0 3vw;
+        margin: 10px;
+        width: ~"calc(100% - 40px)";
+        padding: 0 10px;
         background: #FFFFFF;
 			}
       .store-menu {
