[master] Updated menu layout

--- a/moblet/m-becommerce.less
+++ b/moblet/m-becommerce.less
@@ -76,6 +76,7 @@ m-becommerce {
         width: ~"calc(100% - 40px)";
         padding: 0 10px;
         background: #FFFFFF;
+        border: none;
 			}
       .store-menu {
         display: block;
