--- a/moblet/m-becommerce.less
+++ b/moblet/m-becommerce.less
@@ -234,8 +234,27 @@ m-becommerce {
   }
 
   .product {
-    .full-width-image {
+    // Slider
+    ion-slides {
       width: 100vw;
+      height: 82vw;
+      padding: 3vw;
+      margin-bottom: 20px;
+    }
+    .image-container {
+      width: ~"calc(93vw - 4px)";
+      height: ~"calc(70vw - 4px)";
+      margin: 4px;
+      background-size: contain;
+      background-repeat: no-repeat;
+      background-position: center;
+      box-shadow: 0 2px 4px 0 rgba(0,0,0,0.50);
+    }
+    .swiper-container-horizontal>.swiper-pagination {
+      bottom: 0;
+    }
+    .content{
+      padding: 3vw;
     }
   }
 }
