[master] Corrected .swiper-container height

--- a/moblet/m-becommerce.less
+++ b/moblet/m-becommerce.less
@@ -255,6 +255,9 @@ m-becommerce {
   .product {
     // Slider
     ion-slides {
+      .swiper-container {
+        height: ~"calc(83vw + 20px)";
+      }
       width: 100vw;
       // 20px is used for the pagination
       height: ~"calc(83vw + 20px)";
